# mini-space-simulator

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
android-project/: readme.md  settings.gradle
android-project/app/gradle/wrapper/: gradle-wrapper.properties
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/assets/res/shaders/: game_fragment_shader.frag
android-project/app/src/main/java/com/libuspace/app/: MyUltraActivity.java
android-project/app/src/main/java/org/libsdl/app/: HIDDeviceBLESteamController.java  HIDDeviceManager.java  HIDDeviceUSB.java  SDL.java  SDLActivity.java  SDLAudioManager.java
android-project/app/src/main/res/values/: strings.xml
docker/: Dockerfile
engine/: .#CMakeLists.txt  CMakeLists.txt
engine/glad/include/glad/: glad.h
engine/glad/src/: glad.c
engine/imgui-src/: imgui.h  imgui_demo.cpp
engine/include/: audio_engine.hpp  engine_handler.hpp  engine_sdl.hpp  glprogram.hpp  gltexture.hpp  iengine.hpp  imgui_engine.hpp  matrix.hpp  opengl_debug.hpp  picopng.hxx  vertex.hpp
engine/shaders/: imgui_vertex_shader.vert
engine/src/: audio_engine.cpp  engine_handler.cpp  engine_sdl.cpp  glprogram.cpp  gltexture.cpp  iengine.cpp  imgui_engine.cpp  opengl_debug.cpp  vertex.cpp
game/: CMakeLists.txt
game/include/: animation2d.hpp  audio_wrapper.hpp  collision_detection.hpp  environement.hpp  global.hpp  imgui_wrapper.hpp  render_objects.hpp  render_wrapper.hpp  sprite.hpp  utilities.hpp  world.hpp  world_constants.hpp  world_objects.hpp  world_physics.hpp
game/res/shaders/: game_vertex_shader.vert  imgui_fragment_shader.frag
game/src/: animation2d.cpp  audio_wrapper.cpp  collision_detection.cpp  environement.cpp  global.cpp  imgui_wrapper.cpp  main.cpp  render_objects.cpp  render_wrapper.cpp  sprite.cpp  utilities.cpp  world.cpp  world_objects.cpp
screenshoots/: prebangspng
